# moseq-syllable-clips

./: .gitignore  README.md  pyproject.toml
syllable_clips/: cli.py  session.py  slice.py  syllable_clips.py  util.py  video.py
